skins/vector/main-ltr.css
/* ... */
div#foot ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
div#foot ul li {
	margin: 0;
	padding: 0;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	color: #333333;
	font-size: 0.9em;
}
div#foot ul#foot-icons {
	float: right;
}
div#foot ul#foot-places {
	float: left;
}
div#foot ul#foot-info li {
	line-height: 1.4em;
}
div#foot ul#foot-icons li {
	float: left;
	margin-left: 0.5em;
	line-height: 2em;
}
div#foot ul#foot-places li {
	float: left;
	margin-right: 1em;
	line-height: 2em;
}
/* Logo */
div#p-logo {
	position: absolute;
	top: 0;
	left: 0;
	height: 12em;
	width: 12em;
}
div#p-logo a {
	display: block;
	width: 12em;
	height: 12em;
	background-repeat: no-repeat;
	background-position: 50% 50%;
	text-decoration: none;
}

/*
 * 
 * The following code is highly modified from monobook. It would be nice if the
 * preftoc id was more human readable like preferences-toc for instance,
 * howerver this would require backporting the other skins.
 */

/* Preferences */
#preftoc {
	/* Tabs */
	float: left;
	clear: both;
	margin: 0 !important;
	padding: 0 !important;
	height: 2.25em;
	background-image: url(images/preferences-break.png);
	background-position: bottom left;
	background-repeat: no-repeat;
}
	#preftoc li {
		/* Tab */
		float: left;
		margin: 0;
		padding: 0;
		padding-right: 1px;
		height: 2.25em;
		white-space: nowrap;
		list-style-type: none;
		list-style-image: none;
		background-image: url(images/preferences-break.png);
		background-position: bottom right;
		background-repeat: no-repeat;
	}
	/* IGNORED BY IE6 */
	#preftoc li:first-child {
		margin-left: 1px;
	}
	#preftoc a,
	#preftoc a:active {
		display: inline-block;
		position: relative;
		color: #0645ad;
		padding: 0.5em;
		text-decoration: none;
		background-image: none;
	}
	#preftoc a:hover {
		text-decoration: underline;
	}
	#preftoc li.selected a {
		cursor: default;
		background-image: url(images/preferences-fade.png);
		background-position: bottom;
		background-repeat: repeat-x;
		color: #333333;
		cursor: default;
		text-decoration: none;
	}
#preferences {
	float: left;
	zoom: 1;
	width: 100%;
	margin: 0;
	clear: both;
	border: solid 1px #cccccc;
	background-color: #f9f9f9;
	background-image: url(images/preferences-base.png);
}
#preferences fieldset.prefsection {
	border: none;
	padding: 0;
	margin: 1em;
}
#preferences fieldset.prefsection fieldset {
	border: none;
	border-top: solid 1px #cccccc;
}
#preferences legend {
	color: #666666;
}
#preferences fieldset.prefsection legend.mainLegend {
	display: none;
}
#preferences td {
	padding-left: 0.5em;
	padding-right: 0.5em;
}
#preferences td.htmlform-tip {
	font-size: x-small;
	padding: .2em 2em;
	color: #666666;
}
#preferences div.mw-prefs-buttons {
	padding: 1em;
}
#preferences div.mw-prefs-buttons input {
	margin-right: 0.25em;
}

/*
 * 
 * The following code is slightly modified from monobook
 * 
 */
#content {
	line-height: 1.5em;
}
/* Links */
a {
	text-decoration: none;
	color: #0645ad;
	background: none;
}
a:visited {
	color: #0b0080;
}
a:active {
	color: #faa700;
}
a:hover {
	text-decoration: underline;
}
a.stub {
	color: #772233;
}
a.new, #p-personal a.new {
	color: #ba0000;
}
a.new:visited, #p-personal a.new:visited {
	color: #a55858;
}

/* Inline Elements */
img {
	border: none;
	vertical-align: middle;
}
hr {
	height: 1px;
	color: #aaa;
	background-color: #aaa;
	border: 0;
	margin: .2em 0 .2em 0;
}

/* Structural Elements */
h1,
h2,
h3,
h4,
h5,
h6 {
	color: black;
	background: none;
	font-weight: normal;
	margin: 0;
	padding-top: .5em;
	padding-bottom: .17em;
	border-bottom: 1px solid #aaa;
	width: auto;
}
h1 { font-size: 188%; }
h1 .editsection { font-size: 53%; }
h2 { font-size: 150%; }
h2 .editsection { font-size: 67%; }
h3,
h4,
h5,
h6 {
	border-bottom: none;
	font-weight: bold;
}
h3 { font-size: 132%; }
h3 .editsection { font-size: 76%; font-weight: normal; }
h4 { font-size: 116%; }
h4 .editsection { font-size: 86%; font-weight: normal; }
h5 { font-size: 100%; }
h5 .editsection { font-weight: normal; }
h6 { font-size: 80%;  }
h6 .editsection { font-size: 125%; font-weight: normal; }
p {
	margin: .4em 0 .5em 0;
	line-height: 1.5em;
}
	p img {
		margin: 0;
	}
abbr,
acronym,
.explain {
	border-bottom: 1px dotted black;
	color: black;
	background: none;
	cursor: help;
}
q {
	font-family: Times, "Times New Roman", serif;
	font-style: italic;
}
/* Disabled for now
blockquote {
	font-family: Times, "Times New Roman", serif;
	font-style: italic;
}*/
code {
	background-color: #f9f9f9;
}
pre {
	padding: 1em;
	border: 1px dashed #2f6fab;
	color: black;
	background-color: #f9f9f9;
	line-height: 1.1em;
}
div#content ul {
	line-height: 1.5em;
	list-style-type: square;
	margin: .3em 0 0 1.5em;
	padding: 0;
	list-style-image: url(images/bullet-icon.png);
}
div#content ol {
	line-height: 1.5em;
	margin: .3em 0 0 3.2em;
	padding: 0;
	list-style-image: none;
}
div#content li {
	margin-bottom: .1em;
}
div#content dt {
	font-weight: bold;
	margin-bottom: .1em;
}
div#content dl {
	margin-top: .2em;
	margin-bottom: .5em;
}
div#content dd {
	line-height: 1.5em;
	margin-left: 2em;
	margin-bottom: .1em;
}
/* Tables */
div#content table {
	font-size: 100%;
	color: black;
	/* we don't want the bottom borders of <h2>s to be visible through
	 * floated tables */
	background-color: white;
}
div#content fieldset table {
	/* but keep table layouts in forms clean... */
	background: none;
}
/* Forms */
div#content fieldset {
	border: 1px solid #2f6fab;
	margin: 1em 0 1em 0;
	padding: 0 1em 1em;
	line-height: 1.5em;
}
	fieldset.nested {
		margin: 0 0 0.5em 0;
		padding: 0 0.5em 0.5em;
	}
div#content legend {
	padding: .5em;
	font-size: 95%;
}
div#content form {
	border: none;
	margin: 0;
}
div#content textarea {
	width: 100%;
	padding: .1em;
}
div#content select {
	vertical-align: top;
}
/* Table of Contents */
#toc,
.toc,
.mw-warning {
	border: 1px solid #aaa;
	background-color: #f9f9f9;
	padding: 5px;
	font-size: 95%;
}
/* ... */

